Netflix-youtube/node-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: node-exporter-5
  namespace: prometheus-node-exporter-vr-1-ns
spec:
  selector:
      app: node-exporter-5
  ports:
  - name: node-exporter-5
    protocol: TCP
    port: 9100
    targetPort: 9100
  type: NodePort
