Netflix-youtube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service-5
  labels:
    app: netflix-service-5
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31015
  selector:
    app: netflix-app-5
